[gd_scene load_steps=6 format=3 uid="uid://dd6jvf01ifsgg"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_7mh4i"]
[ext_resource type="Texture2D" uid="uid://dagdecrokfe5u" path="res://Assets/component/cross.png" id="2_u4oow"]
[ext_resource type="Texture2D" uid="uid://biwlub667irwb" path="res://Assets/ui/ecran_credit.png" id="3_28ht1"]
[ext_resource type="Texture2D" uid="uid://ckaygaphbju0" path="res://Assets/entropybattle.png" id="4_8cx18"]
[ext_resource type="AudioStream" uid="uid://cv8ylthitehol" path="res://Assets/son/lobby.mp3" id="5_l3d3y"]

[node name="entropy_battle" type="Node2D"]
script = ExtResource("1_7mh4i")

[node name="credit" type="Node2D" parent="."]
visible = false

[node name="credit_close" type="TextureButton" parent="credit"]
z_index = 4
offset_left = 945.0
offset_top = 4.0
offset_right = 1138.0
offset_bottom = 182.0
texture_normal = ExtResource("2_u4oow")
texture_pressed = ExtResource("2_u4oow")
texture_hover = ExtResource("2_u4oow")
texture_disabled = ExtResource("2_u4oow")
texture_focused = ExtResource("2_u4oow")

[node name="crédit_sprite" type="Sprite2D" parent="credit"]
z_index = 3
position = Vector2(576.5, 325.75)
scale = Vector2(0.606771, 0.615278)
texture = ExtResource("3_28ht1")

[node name="explain" type="Node2D" parent="."]
visible = false

[node name="explain_close" type="TextureButton" parent="explain"]
z_index = 4
offset_left = 1129.0
offset_top = 3.0
offset_right = 1149.0
offset_bottom = 23.0
texture_normal = ExtResource("2_u4oow")
texture_pressed = ExtResource("2_u4oow")
texture_hover = ExtResource("2_u4oow")
texture_disabled = ExtResource("2_u4oow")
texture_focused = ExtResource("2_u4oow")

[node name="menu_sprite" type="Sprite2D" parent="explain"]
position = Vector2(576.5, 325.75)
scale = Vector2(0.606771, 0.615278)
texture = ExtResource("4_8cx18")

[node name="menu" type="Node2D" parent="."]

[node name="menu_sprite" type="Sprite2D" parent="menu"]
position = Vector2(576.5, 325.75)
scale = Vector2(0.606771, 0.615278)
texture = ExtResource("4_8cx18")

[node name="exit" type="TextureButton" parent="menu"]
z_index = 3
offset_left = 1129.0
offset_top = 3.0
offset_right = 1149.0
offset_bottom = 23.0
texture_normal = ExtResource("2_u4oow")
texture_pressed = ExtResource("2_u4oow")
texture_hover = ExtResource("2_u4oow")
texture_disabled = ExtResource("2_u4oow")
texture_focused = ExtResource("2_u4oow")

[node name="credit_open" type="Button" parent="menu"]
offset_left = 182.0
offset_top = 521.0
offset_right = 254.0
offset_bottom = 552.0
text = "CRÉDITS"

[node name="explain_open" type="Button" parent="menu"]
offset_left = 159.0
offset_top = 572.0
offset_right = 283.0
offset_bottom = 603.0
text = "EXPLAINATION"

[node name="start" type="Button" parent="menu"]
offset_left = 189.0
offset_top = 470.0
offset_right = 245.0
offset_bottom = 501.0
text = "START
"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l3d3y")
autoplay = true

[connection signal="pressed" from="credit/credit_close" to="." method="_on_credit_close_pressed"]
[connection signal="pressed" from="explain/explain_close" to="." method="_on_credit_close_pressed"]
[connection signal="pressed" from="menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="menu/credit_open" to="." method="_on_credit_open_pressed"]
[connection signal="pressed" from="menu/explain_open" to="." method="_on_explain_open_pressed"]
[connection signal="pressed" from="menu/start" to="." method="_on_start_pressed"]
